Simplify UrlEncodedParser and add another test